# patchmatch-crosscompiling

./: .gitignore  .gitmodules  CMakeLists.txt  build_host_cmake.sh  build_ios_cmake.sh
